zarf/k8s/prod/ingress/prod-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: hras-system
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://hras.owezzy.tech"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-connections: "50"
spec:
  tls:
    - hosts:
        - api.hras.owezzy.tech
      secretName: backend-tls-secret
  rules:
    - host: api.hras.owezzy.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
